--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,6 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="colorTimeLine">#70dbdb</color>
+    <color name="colorPanelMeal">#CCf2f2f2</color>
 
 </resources>
