--- a/app/src/main/res/layout/gridviewholder.xml
+++ b/app/src/main/res/layout/gridviewholder.xml
@@ -1,20 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<FrameLayout
+        android:id="@+id/framelayout_viewholder"
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="wrap_content">
+
+    <LinearLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+        <ImageView
+                android:id="@+id/image_meal"
+                android:layout_width="wrap_content"
+                android:layout_height="90dp"
+                android:scaleType="fitCenter"/>
+
+        <TextView
+                android:id="@+id/meal_text"
+                android:layout_width="match_parent"
+                android:layout_height="20dp"
+                android:gravity="center_horizontal|center_vertical"/>
+
+    </LinearLayout>
 
     <ImageView
-        android:id="@+id/image_meal"
-        android:layout_width="wrap_content"
-        android:layout_height="90dp"
-        android:scaleType="fitCenter"/>
+            android:id="@+id/check_item"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/baseline_check_circle_white_18"
+            android:visibility="gone"
+            android:layout_gravity="top|end"/>
 
-    <TextView
-        android:id="@+id/meal_text"
-        android:layout_width="match_parent"
-        android:layout_height="20dp"
-        android:gravity="center_horizontal|center_vertical"/>
-
-</LinearLayout>
+</FrameLayout>
