--- a/app/src/main/res/layout/fragment_chrono.xml
+++ b/app/src/main/res/layout/fragment_chrono.xml
@@ -3,6 +3,6 @@
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             tools:context=".Controllers.ChronoFragment">
+             tools:context=".Controllers.Fragments.ChronoFragment">
 
 </FrameLayout>
