--- a/app/src/main/res/layout/fragment_time_line.xml
+++ b/app/src/main/res/layout/fragment_time_line.xml
@@ -3,12 +3,12 @@
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             tools:context=".Controllers.TimeLineFragment">
+             tools:context=".Controllers.Fragments.TimeLineFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <android.support.v7.widget.RecyclerView
+            android:id="@+id/timeline_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="@string/hello_blank_fragment"/>
+            android:padding="5dp"/>
 
 </FrameLayout>
