--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,15 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".Controllers.Activities.MainActivity">
 
-    <android.support.v7.widget.RecyclerView
-            android:id="@+id/timeline_recycler_view"
+    <ImageView
+            android:id="@+id/image_test"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="5dp"/>
+            android:scaleType="matrix"
+            android:clickable="true"
+            android:focusable="true"
+            android:animateLayoutChanges="true"
+            android:src="@drawable/image"/>
 
-</FrameLayout>
+    <View
+            android:id="@+id/top_left_corner"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"/>
+
+    <View
+            android:id="@+id/top_right_corner"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"/>
+
+    <View
+            android:id="@+id/bottom_left_corner"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true"/>
+
+    <View
+            android:id="@+id/bottom_right_corner"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"/>
+</RelativeLayout>
