--- a/app/src/main/res/layout/pick_meal_layout.xml
+++ b/app/src/main/res/layout/pick_meal_layout.xml
@@ -60,7 +60,7 @@
 
         <!-- BUTTON CANCEL -->
         <Button
-                android:id="@+id/button_cancel"
+                android:id="@+id/button_cancel_meal"
                 android:layout_width="@dimen/button_width"
                 android:layout_height="@dimen/button_height"
                 android:text="@string/cancel"
@@ -69,7 +69,7 @@
 
         <!-- BUTTON SAVE -->
         <Button
-                android:id="@+id/button_save"
+                android:id="@+id/button_save_meal"
                 android:layout_width="@dimen/button_width"
                 android:layout_height="@dimen/button_height"
                 android:layout_marginStart="10dp"
