--- a/app/src/main/res/layout/food_selected_layout.xml
+++ b/app/src/main/res/layout/food_selected_layout.xml
@@ -22,8 +22,7 @@
             android:layout_height="30dp"
             android:gravity="center_vertical"
             android:layout_gravity="center_vertical"
-            android:textColor="@android:color/transparent"
-            android:text="Salade"
+            android:textColor="@android:color/black"
             android:textSize="16sp"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"/>
