--- a/app/src/main/res/layout/panel_meal.xml
+++ b/app/src/main/res/layout/panel_meal.xml
@@ -1,38 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<FrameLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:id="@+id/linear_layout_panel"
         android:maxWidth="800dp"
         android:maxHeight="800dp"
         android:gravity="center"
         android:clickable="true"
         android:focusable="true"
-        android:background="@drawable/panel_meal"
-        android:orientation="vertical" >
+        android:background="@drawable/panel_meal" >
 
-        <!-- TITLE MON REPAS-->
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/panel_title"
-            android:layout_gravity="center_horizontal"/>
-
-        <!-- MESSAGE "aucun aliment sélectionné" -->
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/message_no_food"
-                android:layout_marginTop="20dp"
-                android:layout_gravity="center_horizontal"/>
-
-        <!-- View with all foods selected -->
-        <RelativeLayout
-                android:id="@+id/layout_all_foods"
-                android:maxWidth="500dp"
-                android:maxHeight="500dp"
-                android:layout_marginTop="20dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-
-</LinearLayout>
+</FrameLayout>
