--- a/app/src/main/res/layout/pick_meal_layout.xml
+++ b/app/src/main/res/layout/pick_meal_layout.xml
@@ -42,13 +42,23 @@
         android:layout_gravity="bottom"
         android:background="@drawable/gradient"/>
 
-    <!-- PANEL WITH THE MEAL -->
+    <!-- EMPTY PANEL -->
     <include
         android:id="@+id/panel"
         android:layout_width="200dp"
         android:layout_height="200dp"
         layout="@layout/panel_meal"
         android:layout_gravity="end|top"/>
+
+    <!-- PANEL WITH THE MEAL -->
+    <include
+            android:id="@+id/panel_content"
+            android:layout_width="400dp"
+            android:layout_height="400dp"
+            android:visibility="gone"
+            layout="@layout/panel_meal_content"
+            android:layout_gravity="end|top"/>
+
 
     <!-- BUTTONS -->
     <LinearLayout
