--- a/app/src/main/res/layout/barchart_layout.xml
+++ b/app/src/main/res/layout/barchart_layout.xml
@@ -18,8 +18,14 @@
             android:layout_height="0dp"
             android:layout_weight="4"/>
 
-    <com.github.mikephil.charting.charts.LineChart
-            android:id="@+id/linechart"
+    <android.support.v7.widget.RecyclerView
+            android:id="@+id/chronology"
+            android:layout_width="match_parent"
+            android:layout_weight="2"
+            android:layout_height="0dp"/>
+
+    <com.github.mikephil.charting.charts.PieChart
+            android:id="@+id/piechart"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="4"/>
