--- a/app/src/main/res/layout/stat_panel.xml
+++ b/app/src/main/res/layout/stat_panel.xml
@@ -2,7 +2,7 @@
 <android.support.constraint.ConstraintLayout
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <!-- IMAGE EVENT TYPE -->
@@ -13,6 +13,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
+            android:background="@drawable/background_header_panel"
             android:scaleType="centerInside"/>
 
     <!-- TITLE EVENT TYPE -->
@@ -23,6 +24,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toRightOf="@id/image_eventtype"
             app:layout_constraintRight_toRightOf="parent"
+            android:background="@drawable/background_header_panel"
             android:textSize="20sp"
             android:gravity="center"/>
 
@@ -31,9 +33,10 @@
             android:id="@+id/icon_fire"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@drawable/background_header_panel"
             android:src="@drawable/baseline_whatshot_white_24"
-            app:layout_constraintTop_toBottomOf="@id/image_eventtype"
-            app:layout_constraintLeft_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/title_eventtype"
+            app:layout_constraintLeft_toRightOf="@id/image_eventtype"
             app:layout_constraintBottom_toBottomOf="parent"/>
 
     <!-- TEXT NUMBER OF EVENTS -->
@@ -41,9 +44,11 @@
             android:id="@+id/text_nb_events"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/image_eventtype"
+            app:layout_constraintTop_toBottomOf="@id/title_eventtype"
             app:layout_constraintLeft_toRightOf="@id/icon_fire"
             app:layout_constraintBottom_toBottomOf="parent"
+            android:background="@drawable/background_header_panel"
+            android:text="@string/text_nb_events"
             android:textSize="20sp"
             android:gravity="center"/>
 
@@ -52,9 +57,11 @@
             android:id="@+id/value_nb_events"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/image_eventtype"
+            app:layout_constraintTop_toBottomOf="@id/title_eventtype"
             app:layout_constraintLeft_toRightOf="@id/text_nb_events"
             app:layout_constraintBottom_toBottomOf="parent"
+            android:background="@drawable/background_header_panel"
+            android:layout_marginStart="10dp"
             android:textSize="20sp"
             android:gravity="center"/>
 
@@ -63,7 +70,8 @@
             android:id="@+id/evolution_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/image_eventtype"
+            android:background="@drawable/background_header_panel"
+            app:layout_constraintTop_toBottomOf="@id/title_eventtype"
             app:layout_constraintLeft_toRightOf="@id/value_nb_events"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
