--- a/app/src/main/res/layout/barchart_layout.xml
+++ b/app/src/main/res/layout/barchart_layout.xml
@@ -1,34 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-    <include
-        android:id="@+id/stat_panel_layout"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        layout="@layout/stat_panel"/>
-
-    <com.github.mikephil.charting.charts.HorizontalBarChart
-            android:id="@+id/barchart"
+            xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="4"/>
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-    <android.support.v7.widget.RecyclerView
-            android:id="@+id/chronology"
-            android:layout_width="match_parent"
-            android:layout_weight="2"
-            android:layout_height="0dp"/>
+        <include
+                android:id="@+id/stat_panel_layout"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                layout="@layout/stat_panel"
+        android:visibility="gone"/>
 
-    <com.github.mikephil.charting.charts.PieChart
-            android:id="@+id/piechart"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="4"/>
+        <com.github.mikephil.charting.charts.HorizontalBarChart
+                android:id="@+id/barchart"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="4"
+        android:visibility="gone"/>
 
-</LinearLayout>
+        <android.support.v7.widget.RecyclerView
+                android:id="@+id/chronology"
+                android:layout_width="match_parent"
+                android:layout_weight="2"
+                android:layout_height="0dp"
+        android:visibility="gone"/>
+
+        <com.github.mikephil.charting.charts.PieChart
+                android:id="@+id/piechart"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
+    </LinearLayout>
+
+
+
 
