--- a/app/src/main/res/layout/activity_stat.xml
+++ b/app/src/main/res/layout/activity_stat.xml
@@ -2,6 +2,7 @@
 <FrameLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/fragment_place"
@@ -14,15 +15,19 @@
 
 
     <android.support.design.widget.TabLayout
-            android:id="@+id/activity_multi_tabs"
-              android:layout_width="match_parent"
+            android:id="@+id/tabs"
+            app:tabIndicatorColor="@android:color/white"
+            app:tabTextColor="#D4E0F8"
+            app:tabSelectedTextColor="#fff"
+            android:background="@color/colorPrimary"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@android:color/white"
             android:layout_gravity="bottom">
 
         <!--  BUTTON MAP VIEW -->
         <android.support.design.widget.TabItem
                 android:id="@+id/tab_negative_global_analysis"
+                android:tag="@string/menu_global_negative"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:icon="@drawable/baseline_cloud"
@@ -31,6 +36,7 @@
         <!--  BUTTON LIST RESTO VIEW -->
         <android.support.design.widget.TabItem
                 android:id="@+id/tab_positive_global_analysis"
+                android:tag="@string/menu_global_positive"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:icon="@drawable/baseline_wb_sunny_white_24"
@@ -39,6 +45,7 @@
         <!--  BUTTON LIST MATES VIEW -->
         <android.support.design.widget.TabItem
                 android:id="@+id/tab_detail_analysis"
+                android:tag="@string/menu_detail"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:icon="@drawable/baseline_zoom"
