--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         tools:context=".Controllers.Activities.MainActivity">
 
     <ImageView
@@ -23,7 +24,7 @@
             android:clickable="true"
             android:focusable="true"
             android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"/>
+            android:layout_below="@+id/activity_main_toolbar"/>
 
     <View
             android:id="@+id/top_right_corner"
@@ -31,7 +32,7 @@
             android:layout_height="200dp"
             android:clickable="true"
             android:focusable="true"
-            android:layout_alignParentTop="true"
+            android:layout_below="@+id/activity_main_toolbar"
             android:layout_alignParentEnd="true"/>
 
     <View
@@ -58,6 +59,79 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:visibility="gone"/>
+
+    <android.support.v7.widget.Toolbar
+            android:id="@+id/activity_main_toolbar"
+            android:minHeight="?android:attr/actionBarSize"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorPrimary"
+            app:theme="@style/ToolBarStyle">
+
+        <RelativeLayout
+                android:id="@+id/toolbar_relativelayout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:layout_alignParentStart="true"
+                android:orientation="horizontal">
+
+                <!-- Up icon -->
+                <ImageButton
+                        android:id="@+id/button_up"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@color/colorPrimary"
+                        android:src="@drawable/baseline_keyboard_backspace_white_24"/>
+
+                <!-- Title toolbar -->
+                <TextView
+                        android:id="@+id/title_toolbar"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="10dp"
+                        android:text="@string/app_name"
+                        android:textSize="20sp"
+                        android:textColor="@android:color/white"/>
+
+            </LinearLayout>
+
+
+            <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginEnd="10dp"
+                    android:orientation="horizontal">
+
+                <!-- Button Settings -->
+                <ImageButton
+                        android:id="@+id/button_settings"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="10dp"
+                        android:background="@color/colorPrimary"
+                        android:src="@drawable/baseline_settings_white_24"/>
+
+                <!-- Button ADD -->
+                <ImageButton
+                        android:id="@+id/button_add"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@color/colorPrimary"
+                        android:src="@drawable/baseline_add_white_24"/>
+
+            </LinearLayout>
+
+        </RelativeLayout>
+
+    </android.support.v7.widget.Toolbar>
 
     <include
             android:id="@+id/layout_event"
