--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,6 +58,7 @@
             layout="@layout/pick_meal_layout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_below="@id/activity_main_toolbar"
             android:visibility="gone"/>
 
     <android.support.v7.widget.Toolbar
@@ -66,8 +67,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/colorPrimary"
-            app:theme="@style/ToolBarStyle">
-
+            app:theme="@style/ToolBarStyle"
+            tools:context="searchview.toolbar.com.searchviewtoolbar.MainActivity"/>
+<!--
         <RelativeLayout
                 android:id="@+id/toolbar_relativelayout"
                 android:layout_width="match_parent"
@@ -81,7 +83,7 @@
                 android:layout_alignParentStart="true"
                 android:orientation="horizontal">
 
-                <!-- Up icon -->
+                Up icon
                 <ImageButton
                         android:id="@+id/button_up"
                         android:layout_width="wrap_content"
@@ -89,7 +91,7 @@
                         android:background="@color/colorPrimary"
                         android:src="@drawable/baseline_keyboard_backspace_white_24"/>
 
-                <!-- Title toolbar -->
+                 Title toolbar
                 <TextView
                         android:id="@+id/title_toolbar"
                         android:layout_width="wrap_content"
@@ -107,10 +109,17 @@
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
                     android:layout_alignParentEnd="true"
+                    android:gravity="center_vertical"
                     android:layout_marginEnd="10dp"
                     android:orientation="horizontal">
 
-                <!-- Button Settings -->
+                Search View
+                <android.support.v7.widget.SearchView
+                    android:id="@+id/search_area"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+                Button Settings
                 <ImageButton
                         android:id="@+id/button_settings"
                         android:layout_width="wrap_content"
@@ -119,25 +128,17 @@
                         android:background="@color/colorPrimary"
                         android:src="@drawable/baseline_settings_white_24"/>
 
-                <!-- Button ADD -->
-                <ImageButton
-                        android:id="@+id/button_add"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="@color/colorPrimary"
-                        android:src="@drawable/baseline_add_white_24"/>
-
             </LinearLayout>
 
         </RelativeLayout>
-
-    </android.support.v7.widget.Toolbar>
+-->
 
     <include
             android:id="@+id/layout_event"
             layout="@layout/pick_event_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_below="@id/activity_main_toolbar"
             android:visibility="gone"/>
 
 </RelativeLayout>
