--- a/app/src/main/res/layout/pick_event_layout.xml
+++ b/app/src/main/res/layout/pick_event_layout.xml
@@ -2,15 +2,17 @@
 <FrameLayout
          xmlns:android="http://schemas.android.com/apk/res/android"
          android:layout_width="match_parent"
-         android:layout_height="match_parent">
+         android:layout_height="match_parent"
+        android:layout_marginTop="20dp">
 
     <GridView
             android:id="@+id/gridview_event"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:numColumns="4"
+            android:numColumns="3"
             android:verticalSpacing="5dp"
-            android:horizontalSpacing="5dp"/>
+            android:horizontalSpacing="5dp"
+            android:layout_marginBottom="100dp"/>
 
     <!-- TRANSPARENT GRADIENT VIEW -->
     <View
