--- a/app/src/main/res/layout/pick_meal_layout.xml
+++ b/app/src/main/res/layout/pick_meal_layout.xml
@@ -2,7 +2,7 @@
 <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/panel"
+        android:layout_marginTop="20dp"
         xmlns:android="http://schemas.android.com/apk/res/android">
 
     <LinearLayout
@@ -43,7 +43,7 @@
         android:layout_gravity="bottom"
         android:background="@drawable/gradient"/>
 
-    <!-- EMPTY PANEL
+    <!-- EMPTY PANEL -->
     <include
         android:id="@+id/panel"
         android:layout_width="200dp"
@@ -51,7 +51,7 @@
         layout="@layout/panel_meal"
         android:layout_gravity="end|top"/>
 
-     PANEL WITH THE MEAL
+     <!--PANEL WITH THE MEAL-->
     <include
             android:id="@+id/panel_content"
             android:layout_width="400dp"
@@ -59,7 +59,7 @@
             android:visibility="gone"
             layout="@layout/panel_meal_content"
             android:layout_gravity="end|top"/>
- -->
+
 
     <!-- BUTTONS -->
     <LinearLayout
