--- a/app/src/main/res/layout/pick_meal_layout.xml
+++ b/app/src/main/res/layout/pick_meal_layout.xml
@@ -2,7 +2,6 @@
 <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="20dp"
         xmlns:android="http://schemas.android.com/apk/res/android">
 
     <LinearLayout
@@ -28,6 +27,7 @@
                 android:layout_weight="3"
                 android:layout_height="match_parent"
                 android:numColumns="3"
+                android:layout_marginBottom="100dp"
                 android:verticalSpacing="5dp"
                 android:horizontalSpacing="5dp"/>
 
@@ -37,7 +37,7 @@
 
     <!-- TRANSPARENT GRADIENT VIEW -->
     <View
-        android:id="@+id/gradient_view"
+        android:id="@+id/gradient_view_bottom"
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:layout_gravity="bottom"
@@ -49,7 +49,7 @@
         android:layout_width="200dp"
         android:layout_height="200dp"
         layout="@layout/panel_meal"
-        android:layout_gravity="end|top"/>
+        android:layout_gravity="start|bottom"/>
 
      <!--PANEL WITH THE MEAL-->
     <include
@@ -58,8 +58,17 @@
             android:layout_height="400dp"
             android:visibility="gone"
             layout="@layout/panel_meal_content"
-            android:layout_gravity="end|top"/>
+            android:layout_gravity="start|bottom"/>
 
+    <TextView
+            android:id="@+id/counter_meal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="start|bottom"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:textColor="@android:color/holo_red_dark"
+            android:layout_margin="3dp"/>
 
     <!-- BUTTONS -->
     <LinearLayout
