Finalization action deletion food and event

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -66,7 +66,7 @@
             android:id="@+id/layout_meal"
             layout="@layout/pick_meal_layout"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_below="@id/activity_main_toolbar"
             android:visibility="gone"/>
 
@@ -74,7 +74,7 @@
             android:id="@+id/layout_event"
             layout="@layout/pick_event_layout"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_below="@id/activity_main_toolbar"
             android:visibility="gone"/>
 
