--- a/app/src/main/res/menu/menu_grid.xml
+++ b/app/src/main/res/menu/menu_grid.xml
@@ -6,4 +6,11 @@
             android:title="@string/menu_delete"
             android:orderInCategory="1"
             app:showAsAction="ifRoom"/>
+
+    <item
+            android:id="@+id/menu_modify"
+            android:title="@string/menu_modify"
+            android:orderInCategory="1"
+            app:showAsAction="ifRoom"/>
+
 </menu>
