--- a/app/src/main/res/layout/settings_layout.xml
+++ b/app/src/main/res/layout/settings_layout.xml
@@ -39,33 +39,6 @@
 
     </LinearLayout>
 
-    <!-- LANGUAGE -->
-    <LinearLayout
-            android:id="@+id/layout_language"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:paddingStart="10dp"
-            android:paddingEnd="10dp"
-            android:gravity="center_vertical"
-            android:layout_marginTop="10dp"
-            android:layout_below="@+id/layout_user_name">
-
-        <TextView
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"
-                android:text="@string/language_select"/>
-
-        <Spinner
-                android:id="@+id/list_languages"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"/>
-
-    </LinearLayout>
-
     <!-- EXPORT DATA AS EXCEL SHEET -->
     <LinearLayout
             android:id="@+id/layout_export"
@@ -76,7 +49,7 @@
             android:paddingEnd="10dp"
             android:gravity="center_vertical"
             android:layout_marginTop="10dp"
-            android:layout_below="@+id/layout_language">
+            android:layout_below="@+id/layout_user_name">
 
         <TextView
                 android:layout_width="0dp"
@@ -121,5 +94,19 @@
                 android:layout_marginStart="10dp"/>
 
     </LinearLayout>
+
+    <!-- BUTTON SAVE -->
+    <Button
+            android:id="@+id/button_save"
+            android:layout_width="@dimen/button_width"
+            android:layout_height="@dimen/button_height"
+            android:layout_below="@+id/layout_reset"
+            android:layout_marginTop="30dp"
+            android:layout_marginEnd="30dp"
+            android:layout_alignParentEnd="true"
+            android:text="@string/save"
+            style="?android:attr/borderlessButtonStyle"
+            android:textColor="@color/colorAccent"
+            android:background="@android:color/white"/>
 
 </RelativeLayout>
