--- a/app/src/main/res/layout/fragment_stat_detail.xml
+++ b/app/src/main/res/layout/fragment_stat_detail.xml
@@ -1,77 +1,162 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
         tools:context=".Controllers.Fragments.StatDetailFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools">
 
-    <!--SELECT TYPE OF EVENT-->
-    <Spinner
-            android:id="@+id/select_event_type"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:background="@drawable/background_header_panel"
+                android:minHeight="40dp"
+                android:layout_marginBottom="20dp">
 
-    <!--EVOLUTION-->
-    <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="20dp"
-            android:gravity="center">
+            <!--EVOLUTION-->
+            <LinearLayout
+                    android:id="@+id/evolution_layout"
+                    android:orientation="vertical"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="match_parent"
+                    android:gravity="center">
 
+                <TextView
+                        android:id="@+id/text_evolution"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@android:color/white"
+                        android:text="@string/evolution"/>
+
+                <de.hdodenhof.circleimageview.CircleImageView
+                        android:id="@+id/symbol_evolution"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+            </LinearLayout>
+
+            <!--SELECT TYPE OF EVENT-->
+            <Spinner
+                    android:id="@+id/select_event_type"
+                    android:layout_width="0dp"
+                    android:layout_weight="3"
+                    android:layout_height="match_parent"/>
+
+        </LinearLayout>
+
+        <!--CHRONOLOGY TITLE-->
         <TextView
-                android:id="@+id/text_evolution"
+                android:id="@+id/title_chronology"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/evolution"/>
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:text="@string/chronology"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="10dp"/>
 
-        <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/symbol_evolution"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="30dp"
-                android:layout_toEndOf="@+id/text_evolution"/>
+        <!--  LINE SEPARATOR  -->
+        <View
+                android:id="@+id/line_separator_top"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="10dp"
+                android:background="#c0c0c0"/>
 
-    </RelativeLayout>
-
-    <!--CHRONOLOGY TITLE-->
-    <TextView
-            android:id="@+id/title_chronology"
-            android:background="@drawable/background_title_statfragment"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/chronology"
-            android:paddingEnd="30dp"
-            android:paddingTop="5dp"
-            android:paddingBottom="5dp"
-            android:paddingStart="10dp"
-            android:layout_marginTop="20dp"/>
-
-    <!--CHRONOLOGY-->
     <android.support.v7.widget.RecyclerView
             android:id="@+id/chronology"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
-    <!--DETAIL PER FOOD TITLE -->
-    <TextView
-            android:id="@+id/title_detail_per_food"
-            android:background="@drawable/background_title_statfragment"
-            android:layout_width="wrap_content"
+        <!--CHRONOLOGY-->
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="98dp"
+                android:orientation="horizontal">
+
+                <RelativeLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:gravity="center_horizontal">
+
+                    <View
+                        android:id="@+id/empty_view"
+                        android:layout_width="1dp"
+                        android:layout_height="10dp"
+                        android:layout_alignParentTop="true"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/first_day_week"
+                        android:layout_below="@+id/empty_view"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/last_day_week"
+                        android:layout_alignParentBottom="true"/>
+
+                </RelativeLayout>
+
+
+
+    </LinearLayout>
+
+        <!-- LEGEND -->
+        <include
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:layout_gravity="end"
+                android:layout_margin="10dp"
+                layout="@layout/legend_chrono_stat"/>
+
+        <!--DETAIL PER FOOD TITLE -->
+        <TextView
+                android:id="@+id/title_detail_per_food"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:text="@string/detail_per_food_title"
+                android:layout_marginTop="20dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="10dp"/>
+
+        <!--  LINE SEPARATOR  -->
+        <View
+                android:id="@+id/line_separator_bottom"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="10dp"
+                android:background="#c0c0c0"/>
+
+    <ScrollView
+            tools:context=".Controllers.Fragments.StatDetailFragment"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/detail_per_food_title"
-            android:paddingEnd="30dp"
-            android:paddingTop="5dp"
-            android:paddingBottom="5dp"
-            android:paddingStart="10dp"
-            android:layout_marginTop="20dp"/>
+            android:fillViewport="true">
 
     <!--DETAIL PER FOOD-->
     <com.github.mikephil.charting.charts.HorizontalBarChart
             android:id="@+id/barchart_detail_per_food"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="match_parent"/>
 
-</LinearLayout>
+
+
+    </ScrollView>
+
+    <View
+            android:layout_width="match_parent"
+            android:layout_height="100dp" />
+
+    </LinearLayout>
+
+
