--- a/app/src/main/res/layout/fragment_stat_global.xml
+++ b/app/src/main/res/layout/fragment_stat_global.xml
@@ -1,104 +1,144 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<ScrollView
         xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/scroll"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/title_statfragment"
-        android:background="@drawable/background_title_statfragment"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingEnd="30dp"
-        android:paddingTop="5dp"
-        android:paddingBottom="5dp"
-        android:paddingStart="10dp"
-        android:layout_marginTop="20dp"/>
-
-
-    <com.github.mikephil.charting.charts.PieChart
-        android:id="@+id/global_pie_chart"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"/>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:orientation="vertical"
-        android:gravity="center">
-
-        <!-- LINE 1 -->
         <LinearLayout
-                android:id="@+id/food_layout_line1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/foods_list_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:layout_marginTop="20dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="10dp"/>
+
+            <!--  LINE SEPARATOR  -->
+            <View
+                    android:id="@+id/line_separator_top"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginStart="15dp"
+                    android:layout_marginEnd="10dp"
+                    android:background="#c0c0c0"/>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:orientation="vertical"
                 android:gravity="center">
 
-            <include
-                    android:id="@+id/food1"
-                    layout="@layout/food_stat_layout"/>
+                <!-- LINE 1 -->
+                <LinearLayout
+                        android:id="@+id/food_layout_line1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:gravity="center">
 
-            <include
-                    android:id="@+id/food2"
-                    layout="@layout/food_stat_layout"/>
+                    <include
+                            android:id="@+id/food1"
+                            layout="@layout/food_stat_layout"/>
 
-            <include
-                    android:id="@+id/food3"
-                    layout="@layout/food_stat_layout"/>
+                    <include
+                            android:id="@+id/food2"
+                            layout="@layout/food_stat_layout"/>
+
+                    <include
+                            android:id="@+id/food3"
+                            layout="@layout/food_stat_layout"/>
+
+                </LinearLayout>
+
+                <!-- LINE 2 -->
+                <LinearLayout
+                        android:id="@+id/food_layout_line2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:gravity="center">
+
+                    <include
+                            android:id="@+id/food4"
+                            layout="@layout/food_stat_layout"/>
+
+                    <include
+                            android:id="@+id/food5"
+                            layout="@layout/food_stat_layout"/>
+
+                    <include
+                            android:id="@+id/food6"
+                            layout="@layout/food_stat_layout"/>
+
+                    <include
+                            android:id="@+id/food7"
+                            layout="@layout/food_stat_layout"/>
+
+                </LinearLayout>
+
+                <!-- LINE 3 -->
+                <LinearLayout
+                        android:id="@+id/food_layout_line3"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:gravity="center">
+
+                    <include
+                            android:id="@+id/food8"
+                            layout="@layout/food_stat_layout"/>
+
+                    <include
+                            android:id="@+id/food9"
+                            layout="@layout/food_stat_layout"/>
+
+                    <include
+                            android:id="@+id/food10"
+                            layout="@layout/food_stat_layout"/>
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <TextView
+                    android:id="@+id/piechart_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginStart="15dp"
+                    android:layout_marginEnd="10dp"/>
+
+            <!--  LINE SEPARATOR  -->
+            <View
+                    android:id="@+id/line_separator_bottom"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginStart="15dp"
+                    android:layout_marginEnd="10dp"
+                    android:background="#c0c0c0"/>
+
+            <com.github.mikephil.charting.charts.PieChart
+                    android:id="@+id/global_pie_chart"
+                    android:layout_width="match_parent"
+                    android:layout_height="400dp"
+                    android:layout_marginTop="20dp"/>
+
+            <!--  EMPTY VIEW TO AVOID OVERLAPPING OF TABLAYOUT  -->
+            <View android:layout_width="match_parent"
+                  android:layout_height="200dp"/>
 
         </LinearLayout>
 
-        <!-- LINE 2 -->
-        <LinearLayout
-                android:id="@+id/food_layout_line2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:gravity="center">
-
-            <include
-                    android:id="@+id/food4"
-                    layout="@layout/food_stat_layout"/>
-
-            <include
-                    android:id="@+id/food5"
-                    layout="@layout/food_stat_layout"/>
-
-            <include
-                    android:id="@+id/food6"
-                    layout="@layout/food_stat_layout"/>
-
-            <include
-                    android:id="@+id/food7"
-                    layout="@layout/food_stat_layout"/>
-
-        </LinearLayout>
-
-        <!-- LINE 3 -->
-        <LinearLayout
-                android:id="@+id/food_layout_line3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:gravity="center">
-
-            <include
-                    android:id="@+id/food8"
-                    layout="@layout/food_stat_layout"/>
-
-            <include
-                    android:id="@+id/food9"
-                    layout="@layout/food_stat_layout"/>
-
-            <include
-                    android:id="@+id/food10"
-                    layout="@layout/food_stat_layout"/>
-
-        </LinearLayout>
-
-    </LinearLayout>
-
-</FrameLayout>
+</ScrollView>
