--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="button_width">100dp</dimen>
     <dimen name="button_height">36dp</dimen>
     <dimen name="save_dialog_corners_radius">16dp</dimen>
+    <dimen name="size_square_chrono_grid_stat">10dp</dimen>
 </resources>
