--- a/app/src/main/res/drawable/background_to_delete.xml
+++ b/app/src/main/res/drawable/background_to_delete.xml
@@ -4,10 +4,10 @@
         android:shape="rectangle">
 
     <solid
-            android:color="@android:color/transparent"/>
+            android:color="@android:color/holo_red_light"/>
 
     <stroke
             android:width="1dp"
-            android:color="@color/caldroid_darker_gray"
-        />
+            android:color="@color/caldroid_holo_blue_light"
+    />
 </shape>
