--- a/app/src/main/res/layout/activity_chrono.xml
+++ b/app/src/main/res/layout/activity_chrono.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/calendar_fragment"
         tools:context=".Controllers.Activities.ChronoActivity">
 
@@ -17,4 +18,27 @@
             android:animateLayoutChanges="true"
             android:src="@drawable/image"/>
 
-</FrameLayout>
+    <android.support.v7.widget.Toolbar
+            android:id="@+id/activity_toolbar"
+            android:minHeight="?android:attr/actionBarSize"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorPrimary"
+            app:theme="@style/ToolBarStyle"/>
+
+    <FrameLayout
+            android:id="@+id/fragment_place"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="10dp"
+            android:layout_below="@id/activity_toolbar"/>
+
+    <ProgressBar
+            android:id="@+id/progress_bar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:indeterminate="true"
+            android:visibility="gone"/>
+
+</RelativeLayout>
