--- a/app/src/main/res/layout/activity_pick.xml
+++ b/app/src/main/res/layout/activity_pick.xml
@@ -20,7 +20,7 @@
 
     <!-- TOOLBAR -->
     <android.support.v7.widget.Toolbar
-            android:id="@+id/activity_pick_toolbar"
+            android:id="@+id/activity_toolbar"
             android:minHeight="?android:attr/actionBarSize"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -33,7 +33,7 @@
             layout="@layout/pick_meal_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@id/activity_pick_toolbar"
+            android:layout_below="@id/activity_toolbar"
             android:visibility="gone"/>
 
     <!-- LAYOUT PICK EVENT TYPE -->
@@ -42,7 +42,7 @@
             layout="@layout/pick_event_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@id/activity_pick_toolbar"
+            android:layout_below="@id/activity_toolbar"
             android:visibility="gone"/>
 
 </RelativeLayout>
