--- a/app/src/main/res/layout/activity_stat.xml
+++ b/app/src/main/res/layout/activity_stat.xml
@@ -8,8 +8,19 @@
         android:id="@+id/fragment_place"
         tools:context=".Controllers.Activities.StatActivity">
 
+    <!-- BACKGROUND PICTURE -->
+    <ImageView
+            android:id="@+id/image_background"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="matrix"
+            android:clickable="true"
+            android:focusable="true"
+            android:animateLayoutChanges="true"
+            android:src="@drawable/image"/>
+
     <android.support.v7.widget.Toolbar
-            android:id="@+id/activity_stat_toolbar"
+            android:id="@+id/activity_toolbar"
             android:minHeight="?android:attr/actionBarSize"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -20,8 +31,15 @@
             android:id="@+id/stat_viewpager"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@+id/activity_stat_toolbar"/>
+            android:layout_below="@+id/activity_toolbar"/>
 
+    <ProgressBar
+            android:id="@+id/progress_bar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:indeterminate="true"
+            android:visibility="gone"/>
 
     <android.support.design.widget.TabLayout
             android:id="@+id/tabs"
