--- a/app/src/main/res/layout/activity_chrono.xml
+++ b/app/src/main/res/layout/activity_chrono.xml
@@ -29,9 +29,9 @@
     <FrameLayout
             android:id="@+id/fragment_place"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="10dp"
-            android:layout_below="@id/activity_toolbar"/>
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:padding="10dp"/>
 
     <ProgressBar
             android:id="@+id/progress_bar"
