--- a/app/src/main/res/layout/calendar_item.xml
+++ b/app/src/main/res/layout/calendar_item.xml
@@ -1,43 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<FrameLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/calendar_item_bg"
-        android:gravity="center_vertical"
-        android:orientation="vertical">
+        android:gravity="center">
+
+    <ImageView
+        android:id="@+id/image_background"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/background_empty"
+        android:padding="3dp"
+        android:scaleType="centerInside"/>
 
     <TextView
-        android:id="@+id/day_number"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="14sp"
-        android:padding="1dp"/>
+            android:id="@+id/day_number"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@android:color/black"
+            android:layout_gravity="center"
+            android:textStyle="bold"
+            android:textSize="16sp"/>
 
-    <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:gravity="center_vertical|center_horizontal"
-            android:orientation="horizontal">
-
-            <ImageView
-                    android:id="@+id/fire_icon"
-                    android:layout_height="wrap_content"
-                    android:layout_width="wrap_content"
-                    android:adjustViewBounds="true"
-                    android:scaleType="fitCenter"
-                    android:src="@drawable/baseline_whatshot_white_24"/>
-
-            <TextView
-                    android:id="@+id/number_events"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="15sp"
-                    android:textStyle="bold"
-                    android:textColor="@android:color/holo_red_dark">
-            </TextView>
-
-    </LinearLayout>
-
-</LinearLayout>
+</FrameLayout>
 
