--- a/app/src/main/res/menu/menu_toolbar_chrono.xml
+++ b/app/src/main/res/menu/menu_toolbar_chrono.xml
@@ -1,5 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu
-      xmlns:tools="http://schemas.android.com/tools"
-      tools:context=".ChronoActivity">
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        tools:context=".ChronoActivity">
+
+    <item
+            android:id="@+id/action_info"
+            android:icon="@drawable/baseline_info_white_24"
+            app:showAsAction="ifRoom"
+            android:title=""/>
+
 </menu>
